client/src/components/Popups/ChooseProfilePicture/index.module.css
.mainContainer {
	width: 60em;
	max-width: 100%;
	height: 100%;
	/* overflow: auto hidden; */
}

.series {
	display: flex;
	flex-direction: column;
	margin: 1em;
	margin-right: 0;
	position: relative;
	/* padding-bottom: 11em; */
	height: 12em;
}

.images {
	display: flex;
	position: absolute;
	top: 2em;
	transition: left 0.2s ease-in-out;
}

.images button {
	background-color: transparent;
	margin-right: 8px;
	cursor: pointer;
	width: 160px;
	height: 160px;
	border-radius: 0.25em;
	border: 0.15em solid transparent;
	overflow: hidden;
}

.images img {
	width: 100%;
	height: 100%;
	-webkit-user-drag: none;
}

.images button:hover {
	border-color: #e5e5e5;
}

.pagination {
	height: 12em;
	width: 4em;
	position: absolute;
	bottom: 0;
	background-color: rgba(0, 0, 0, 0.75);
	border: 0;
	opacity: 0;
	transition: opacity 0.15s;
	cursor: pointer;
	z-index: 2;
}

.pagination.left svg {
	transform: rotate(90deg);
}

.pagination.right {
	right: 0px;
}

.pagination.right svg {
	transform: rotate(-90deg);
}

.series:hover .pagination {
	opacity: 1;
}

@media (hover: none) {
	.pagination {
		opacity: 1;
	}
}

